--- a/itimes/src/main/resources/static/item.html
+++ b/itimes/src/main/resources/static/item.html
@@ -144,8 +144,8 @@
 
 
       <!--layer-->
-      <div id="edit-layer" style="display: none;" class="over-wrapper" ng-hide="showEditLayer==0">
-        <a ng-click="closeLayer(edittingItem)" href="javascript:void(0);" class="over-close">×</a>
+      <div id="edit-layer"  class="over-wrapper" ng-hide="showEditLayer==0">
+        <a ng-click="closeLayer(edittingItem)" href="javascript:void(0);" class="over-close">ï¿½</a>
         <!-- 
         <button type="button" class="btn btn-default btn-lg over-close">
           <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
